[gd_scene load_steps=5 format=3 uid="uid://vyw4va1y2j2e"]

[ext_resource type="Script" path="res://HUD/IngameHUD.gd" id="1_1uqa5"]
[ext_resource type="Theme" uid="uid://bnulg8akvjth4" path="res://DarkTheme/Dark.theme" id="1_50c7g"]
[ext_resource type="Texture2D" uid="uid://to1ouubs5rxs" path="res://Sprites/KBPrompts/66.png" id="3_tu0tx"]
[ext_resource type="StyleBox" uid="uid://dl3aukcscpak1" path="res://Menu/PaddedPanel.tres" id="4_bi0vt"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_50c7g")
script = ExtResource("1_1uqa5")

[node name="HUDContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 50

[node name="Speedometer" type="Label" parent="HUDContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "135 KM/H"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Position" type="Label" parent="HUDContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Pos: 1/4"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Lap" type="Label" parent="HUDContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Lap: 1/3"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LapTimer" type="Label" parent="HUDContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "00:34:147"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="Label" parent="HUDContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
text = "Total:	01:24:091
-------	==========
Last:	00:43:690
Best:	00:42:103"
horizontal_alignment = 3
vertical_alignment = 1

[node name="ResetIndicator" type="Label" parent="HUDContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 1, 0.309804, 1)
theme_override_colors/font_outline_color = Color(0.203922, 0.301961, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "Reset pressed
Waiting for other players to reset


"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters_behavior = 2

[node name="HUDContainer2" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 50

[node name="ReadyIndicator" type="VBoxContainer" parent="HUDContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="NotReady" type="Label" parent="HUDContainer2/ReadyIndicator"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.309804, 0.309804, 1)
theme_override_colors/font_outline_color = Color(0.301961, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "Not Ready"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters_behavior = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUDContainer2/ReadyIndicator"]
layout_mode = 2

[node name="Press" type="Label" parent="HUDContainer2/ReadyIndicator/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.309804, 0.309804, 1)
theme_override_colors/font_outline_color = Color(0.301961, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "Press"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters_behavior = 2

[node name="PromptIcon" type="TextureRect" parent="HUDContainer2/ReadyIndicator/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_tu0tx")
stretch_mode = 4

[node name="Ready" type="Label" parent="HUDContainer2/ReadyIndicator/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.309804, 0.309804, 1)
theme_override_colors/font_outline_color = Color(0.301961, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "to get ready!"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters_behavior = 2

[node name="Panel" type="Panel" parent="HUDContainer2/ReadyIndicator"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = ExtResource("4_bi0vt")

[node name="Nickname" type="Label" parent="HUDContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
text = "Tom3s"
horizontal_alignment = 1
vertical_alignment = 1
